--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,12 @@
 MenuLibre                                                                  NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
+07 Apr 2016, MenuLibre 2.1.3
+
+- Updated Translations:
+  . Brazilian Portuguese, Croatian, English (United Kingdom),
+    Esperanto, French, Lithuanian, Polish, Serbian, Swedish
+
+
 08 Oct 2015, MenuLibre 2.1.2
 
 - General:
@@ -7,6 +14,7 @@ MenuLibre                                                                  NEWS
 - Bug Fixes:
   . Set the window title that is displayed in several applications
     including Xfce Panel.
+
 
 20 Sep 2015, MenuLibre 2.1.1
 
