--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-09-26 20:33-0400\n"
-"PO-Revision-Date: 2016-01-18 17:19+0000\n"
-"Last-Translator: Willem Hobers <Unknown>\n"
+"PO-Revision-Date: 2014-10-12 23:28+0000\n"
+"Last-Translator: Andi Chandler <Unknown>\n"
 "Language-Team: English (United Kingdom) <en_GB@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2016-01-19 05:47+0000\n"
-"X-Generator: Launchpad (build 17886)\n"
+"X-Launchpad-Export-Date: 2016-04-15 06:05+0000\n"
+"X-Generator: Launchpad (build 17995)\n"
 "Language: \n"
 
 #: ../menulibre.desktop.in.h:1
