--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-09-26 20:33-0400\n"
-"PO-Revision-Date: 2016-02-17 22:45+0000\n"
-"Last-Translator: Adriano Ramos <Unknown>\n"
+"PO-Revision-Date: 2014-03-28 04:04+0000\n"
+"Last-Translator: leo523 <Unknown>\n"
 "Language-Team: Brazilian Portuguese <pt_BR@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2016-02-18 05:49+0000\n"
-"X-Generator: Launchpad (build 17925)\n"
+"X-Launchpad-Export-Date: 2016-04-15 06:05+0000\n"
+"X-Generator: Launchpad (build 17995)\n"
 "Language: pt_BR\n"
 
 #: ../menulibre.desktop.in.h:1
