--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-09-26 20:33-0400\n"
-"PO-Revision-Date: 2014-03-28 04:04+0000\n"
-"Last-Translator: leo523 <Unknown>\n"
+"PO-Revision-Date: 2016-05-13 13:30+0000\n"
+"Last-Translator: Felippe Henrique Diniz de Castro <fhd.castro@gmail.com>\n"
 "Language-Team: Brazilian Portuguese <pt_BR@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2016-04-15 06:05+0000\n"
-"X-Generator: Launchpad (build 17995)\n"
+"X-Launchpad-Export-Date: 2016-05-14 05:36+0000\n"
+"X-Generator: Launchpad (build 18025)\n"
 "Language: pt_BR\n"
 
 #: ../menulibre.desktop.in.h:1
@@ -53,10 +53,14 @@ msgid ""
 "Possible values include: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, "
 "XFCE, Old"
 msgstr ""
+"Uma lista de ambientes que não pode ser mostrados nessa entrada. Você pode "
+"usar somente essa chave se \"OnlyShowIn\" não estiver selecionado.\n"
+"Possíveis valores incluem: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, "
+"XFCE, Old"
 
 #: ../data/ui/MenulibreWindow.ui.h:8
 msgid "Not Shown In"
-msgstr ""
+msgstr "Não mostrar em"
 
 #: ../data/ui/MenulibreWindow.ui.h:9
 msgid ""
@@ -66,10 +70,15 @@ msgid ""
 "Possible values include: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, "
 "XFCE, Old"
 msgstr ""
+"Uma lista de ambientes que podem ser mostrados nessa entrada. Outros "
+"ambientes que não podem ser mostrados nessa entrada. Você só pode usar essa "
+"chave se \"NotShowIn\" não está selecionado.\n"
+"Possíveis valores incluem: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, "
+"XFCE, Old"
 
 #: ../data/ui/MenulibreWindow.ui.h:11
 msgid "Only Shown In"
-msgstr ""
+msgstr "Apenas mostrar em"
 
 #: ../data/ui/MenulibreWindow.ui.h:12
 msgid ""
@@ -77,6 +86,9 @@ msgid ""
 "file is not present or is not executable, this entry may not be shown in a "
 "menu."
 msgstr ""
+"Localização para um arquivo executável para determinar se o programa está "
+"instalado. Se o arquivo não estiver presente ou não for executável, essa "
+"entrada pode não aparecer no em um menu."
 
 #: ../data/ui/MenulibreWindow.ui.h:13
 msgid "Try Exec"
