--- a/po/hr.po
+++ b/po/hr.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-05-18 22:03-0400\n"
-"PO-Revision-Date: 2013-12-04 05:59+0000\n"
-"Last-Translator: freedomrun <Unknown>\n"
+"PO-Revision-Date: 2016-03-21 23:30+0000\n"
+"Last-Translator: zvacet <ikoli@yahoo.com>\n"
 "Language-Team: Croatian <hr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2016-05-19 05:39+0000\n"
+"X-Launchpad-Export-Date: 2016-05-19 05:51+0000\n"
 "X-Generator: Launchpad (build 18025)\n"
 "Language: hr\n"
 
