--- a/po/cs.po
+++ b/po/cs.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-05-18 22:03-0400\n"
-"PO-Revision-Date: 2015-08-19 06:09+0000\n"
-"Last-Translator: Petr Šimáček <petr.simacek@gmail.com>\n"
+"PO-Revision-Date: 2013-05-29 03:05+0000\n"
+"Last-Translator: k3dar7 <k3dar7@gmail.com>\n"
 "Language-Team: Czech <cs@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2016-05-19 05:51+0000\n"
+"X-Launchpad-Export-Date: 2016-05-20 05:33+0000\n"
 "X-Generator: Launchpad (build 18025)\n"
 "Language: cs\n"
 
