--- a/po/it.po
+++ b/po/it.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-05-18 22:03-0400\n"
-"PO-Revision-Date: 2014-08-28 13:47+0000\n"
-"Last-Translator: Man from Mars <manfrommars@libero.it>\n"
+"PO-Revision-Date: 2016-06-23 22:23+0000\n"
+"Last-Translator: enrico <milanesi.enrico@gmail.com>\n"
 "Language-Team: Italian <it@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2016-05-20 05:33+0000\n"
-"X-Generator: Launchpad (build 18025)\n"
+"X-Launchpad-Export-Date: 2016-06-26 06:02+0000\n"
+"X-Generator: Launchpad (build 18111)\n"
 "Language: it\n"
 
 #: ../menulibre.desktop.in.h:1
@@ -92,7 +92,7 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:13
 msgid "Try Exec"
-msgstr ""
+msgstr "Prova ad eseguire"
 
 #: ../data/ui/MenulibreWindow.ui.h:14
 msgid "The MIME type(s) supported by this application."
@@ -158,11 +158,11 @@ msgstr "DBUS Attivabile"
 
 #: ../data/ui/MenulibreWindow.ui.h:25
 msgid "Browse Icons…"
-msgstr ""
+msgstr "Sfoglia icone..."
 
 #: ../data/ui/MenulibreWindow.ui.h:26
 msgid "Browse Files..."
-msgstr ""
+msgstr "Sfoglia file..."
 
 #: ../data/ui/MenulibreWindow.ui.h:27 ../menulibre/Dialogs.py:38
 #: ../menulibre/MenulibreApplication.py:237
@@ -347,7 +347,7 @@ msgstr "A proposito di MenuLibre"
 
 #: ../menulibre/Dialogs.py:40
 msgid "Copyright © 2012-2015 Sean Davis"
-msgstr ""
+msgstr "Copyright © 2012-2015 Sean Davis"
 
 #: ../menulibre/Dialogs.py:55
 msgid "Do you want to read the MenuLibre manual online?"
@@ -537,7 +537,7 @@ msgstr "Altro"
 
 #: ../menulibre/MenulibreApplication.py:214
 msgid "MenuLibre cannot be run as root."
-msgstr ""
+msgstr "MenuLibre non può essere eseguito come root"
 
 #: ../menulibre/MenulibreApplication.py:215
 msgid ""
@@ -545,6 +545,9 @@ msgid ""
 "href='https://wiki.smdavis.us/doku.php?id=menulibre_faq'>online "
 "documentation</a> for more information."
 msgstr ""
+"Controlla la  <a "
+"href='https://wiki.smdavis.us/doku.php?id=menulibre_faq'>documentazione "
+"online</a> per maggiori informazioni."
 
 #: ../menulibre/MenulibreApplication.py:313
 msgid "Add _Launcher..."
@@ -631,7 +634,7 @@ msgstr "Avanzato"
 
 #: ../menulibre/MenulibreApplication.py:657
 msgid "ThisEntry"
-msgstr ""
+msgstr "Questo elemento"
 
 #: ../menulibre/MenulibreApplication.py:675
 msgid "Select a category"
