--- a/po/sk.po
+++ b/po/sk.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2016-08-27 19:40-0400\n"
-"PO-Revision-Date: 2016-07-28 16:15+0000\n"
+"PO-Revision-Date: 2016-10-07 20:37+0000\n"
 "Last-Translator: Dusan Kazik <prescott66@gmail.com>\n"
 "Language-Team: Slovak <sk@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2016-08-28 06:32+0000\n"
-"X-Generator: Launchpad (build 18179)\n"
+"X-Launchpad-Export-Date: 2016-10-08 06:49+0000\n"
+"X-Generator: Launchpad (build 18227)\n"
 "Language: sk\n"
 
 #: ../menulibre.desktop.in.h:1
@@ -200,11 +200,11 @@ msgstr "Presunúť nadol"
 
 #: ../data/ui/MenulibreWindow.ui.h:35
 msgid "Sort alphabetically"
-msgstr ""
+msgstr "Usporiadať podľa abecedy"
 
 #: ../data/ui/MenulibreWindow.ui.h:36
 msgid "Sort"
-msgstr ""
+msgstr "Usporiadať"
 
 #: ../data/ui/MenulibreWindow.ui.h:37
 msgid "<small><i>Filename</i></small>"
