--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-02-11 23:14-0500\n"
-"PO-Revision-Date: 2014-10-12 23:28+0000\n"
-"Last-Translator: Andi Chandler <Unknown>\n"
+"PO-Revision-Date: 2016-01-18 17:19+0000\n"
+"Last-Translator: Willem Hobers <Unknown>\n"
 "Language-Team: English (United Kingdom) <en_GB@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2017-02-12 06:13+0000\n"
+"X-Launchpad-Export-Date: 2017-02-12 06:22+0000\n"
 "X-Generator: Launchpad (build 18326)\n"
 "Language: \n"
 
