--- a/po/fr.po
+++ b/po/fr.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-02-11 23:14-0500\n"
-"PO-Revision-Date: 2016-10-01 12:00+0000\n"
-"Last-Translator: jc1 <jc1.quebecos@gmail.com>\n"
+"PO-Revision-Date: 2016-03-05 22:22+0000\n"
+"Last-Translator: YS1 <Unknown>\n"
 "Language-Team: French <fr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2017-02-12 06:13+0000\n"
+"X-Launchpad-Export-Date: 2017-02-12 06:22+0000\n"
 "X-Generator: Launchpad (build 18326)\n"
 "Language: frnech\n"
 "X-Poedit-SourceCharset: UTF-8\n"
