--- a/po/ml.po
+++ b/po/ml.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-02-11 23:14-0500\n"
-"PO-Revision-Date: 2013-12-08 06:11+0000\n"
-"Last-Translator: ST Alfas <Unknown>\n"
+"PO-Revision-Date: 2014-02-10 23:30+0000\n"
+"Last-Translator: STyM Alfazz <Unknown>\n"
 "Language-Team: Malayalam <ml@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2017-02-12 06:13+0000\n"
+"X-Launchpad-Export-Date: 2017-02-12 06:22+0000\n"
 "X-Generator: Launchpad (build 18326)\n"
 "Language: ml\n"
 
