--- a/po/pl.po
+++ b/po/pl.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-02-11 23:14-0500\n"
-"PO-Revision-Date: 2014-05-20 10:28+0000\n"
-"Last-Translator: Piotr Strębski <strebski@o2.pl>\n"
+"PO-Revision-Date: 2016-10-23 11:22+0000\n"
+"Last-Translator: m4sk1n <Unknown>\n"
 "Language-Team: polski <>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2017-02-12 06:13+0000\n"
+"X-Launchpad-Export-Date: 2017-02-12 06:22+0000\n"
 "X-Generator: Launchpad (build 18326)\n"
 "Language: \n"
 
