--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-02-11 23:14-0500\n"
-"PO-Revision-Date: 2014-03-28 04:04+0000\n"
-"Last-Translator: leo523 <Unknown>\n"
+"PO-Revision-Date: 2016-05-13 13:30+0000\n"
+"Last-Translator: Felippe H D de Castro <fhd.castro@gmail.com>\n"
 "Language-Team: Brazilian Portuguese <pt_BR@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2017-02-12 06:13+0000\n"
+"X-Launchpad-Export-Date: 2017-02-12 06:22+0000\n"
 "X-Generator: Launchpad (build 18326)\n"
 "Language: pt_BR\n"
 
