--- a/po/pl.po
+++ b/po/pl.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-02-19 17:29-0500\n"
-"PO-Revision-Date: 2014-05-20 10:28+0000\n"
+"PO-Revision-Date: 2017-02-21 17:09+0000\n"
 "Last-Translator: Piotr Strębski <strebski@o2.pl>\n"
 "Language-Team: polski <>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2017-02-20 05:44+0000\n"
+"X-Launchpad-Export-Date: 2017-02-22 06:07+0000\n"
 "X-Generator: Launchpad (build 18326)\n"
 "Language: \n"
 
@@ -187,7 +187,7 @@ msgstr "Przywraca aktywator"
 
 #: ../data/ui/MenulibreWindow.ui.h:32
 msgid "Test Launcher"
-msgstr ""
+msgstr "Testowy wyzwalacz"
 
 #: ../data/ui/MenulibreWindow.ui.h:33 ../menulibre/MenulibreApplication.py:376
 msgid "Delete"
@@ -604,11 +604,11 @@ msgstr "P_rzywróć"
 
 #: ../menulibre/MenulibreApplication.py:368
 msgid "_Execute"
-msgstr ""
+msgstr "_Wykonaj"
 
 #: ../menulibre/MenulibreApplication.py:369
 msgid "Execute Launcher"
-msgstr ""
+msgstr "Wykonaj wyzwalacz"
 
 #: ../menulibre/MenulibreApplication.py:375
 msgid "_Delete"
@@ -715,7 +715,7 @@ msgstr "Nowy katalog"
 #: ../menulibre/MenulibreApplication.py:1758
 #, python-format
 msgid "Could not find \"%s\" in your PATH."
-msgstr ""
+msgstr "Nie można odnaleźć \"%s\" w Twojej ŚCIEŻCE."
 
 #: ../menulibre/MenulibreApplication.py:1780
 msgid "Are you sure you want to delete this separator?"
