--- a/po/lt.po
+++ b/po/lt.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2017-02-19 17:29-0500\n"
-"PO-Revision-Date: 2015-03-20 19:33+0000\n"
+"PO-Revision-Date: 2017-02-28 15:28+0000\n"
 "Last-Translator: Moo <hazap@hotmail.com>\n"
 "Language-Team: Lithuanian <lt@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2017-02-20 05:44+0000\n"
-"X-Generator: Launchpad (build 18326)\n"
+"X-Launchpad-Export-Date: 2017-03-01 06:10+0000\n"
+"X-Generator: Launchpad (build 18329)\n"
 
 #: ../menulibre.desktop.in.h:1
 msgid "Menu Editor"
@@ -185,7 +185,7 @@ msgstr "Atkurti"
 
 #: ../data/ui/MenulibreWindow.ui.h:32
 msgid "Test Launcher"
-msgstr ""
+msgstr "Išbandyti leistuką"
 
 #: ../data/ui/MenulibreWindow.ui.h:33 ../menulibre/MenulibreApplication.py:376
 msgid "Delete"
@@ -602,11 +602,11 @@ msgstr "At_kurti"
 
 #: ../menulibre/MenulibreApplication.py:368
 msgid "_Execute"
-msgstr ""
+msgstr "_Vykdyti"
 
 #: ../menulibre/MenulibreApplication.py:369
 msgid "Execute Launcher"
-msgstr ""
+msgstr "Vykdyti leistuką"
 
 #: ../menulibre/MenulibreApplication.py:375
 msgid "_Delete"
@@ -712,7 +712,7 @@ msgstr "Naujas katalogas"
 #: ../menulibre/MenulibreApplication.py:1758
 #, python-format
 msgid "Could not find \"%s\" in your PATH."
-msgstr ""
+msgstr "Nepavyko jūsų KELYJE rasti \"%s\"."
 
 #: ../menulibre/MenulibreApplication.py:1780
 msgid "Are you sure you want to delete this separator?"
