--- a/po/de.po
+++ b/po/de.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2017-02-19 17:29-0500\n"
-"PO-Revision-Date: 2014-06-05 15:45+0000\n"
-"Last-Translator: Tobias Bannert <tobannert@gmail.com>\n"
+"PO-Revision-Date: 2017-03-15 19:38+0000\n"
+"Last-Translator: Ettore Atalan <atalanttore@googlemail.com>\n"
 "Language-Team: German <de@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2017-02-20 05:44+0000\n"
-"X-Generator: Launchpad (build 18326)\n"
+"X-Launchpad-Export-Date: 2017-03-19 06:40+0000\n"
+"X-Generator: Launchpad (build 18332)\n"
 
 #: ../menulibre.desktop.in.h:1
 msgid "Menu Editor"
@@ -191,7 +191,7 @@ msgstr "Zurücksetzen"
 
 #: ../data/ui/MenulibreWindow.ui.h:32
 msgid "Test Launcher"
-msgstr ""
+msgstr "Starter testen"
 
 #: ../data/ui/MenulibreWindow.ui.h:33 ../menulibre/MenulibreApplication.py:376
 msgid "Delete"
@@ -207,11 +207,11 @@ msgstr "Nach unten"
 
 #: ../data/ui/MenulibreWindow.ui.h:36
 msgid "Sort alphabetically"
-msgstr ""
+msgstr "Alphabetisch sortieren"
 
 #: ../data/ui/MenulibreWindow.ui.h:37
 msgid "Sort"
-msgstr ""
+msgstr "Sortieren"
 
 #: ../data/ui/MenulibreWindow.ui.h:38
 msgid "<small><i>Filename</i></small>"
@@ -612,11 +612,11 @@ msgstr "_Zurücknehmen"
 
 #: ../menulibre/MenulibreApplication.py:368
 msgid "_Execute"
-msgstr ""
+msgstr "_Ausführen"
 
 #: ../menulibre/MenulibreApplication.py:369
 msgid "Execute Launcher"
-msgstr ""
+msgstr "Starter ausführen"
 
 #: ../menulibre/MenulibreApplication.py:375
 msgid "_Delete"
