Launchpad automatic translations update.

--- a/po/sv.po
+++ b/po/sv.po
@@ -3,21 +3,21 @@
 # This file is distributed under the same license as the menulibre package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2015.
 # Translators:
-# Påvel Nicklasson <pavel@frimix.se>, 2015
+# Påvel Nicklasson <pavel2@frimix.se>, 2015-2017
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2017-02-19 17:29-0500\n"
-"PO-Revision-Date: 2015-06-05 15:16+0000\n"
+"PO-Revision-Date: 2017-04-09 18:39+0000\n"
 "Last-Translator: Påvel Nicklasson <Unknown>\n"
 "Language-Team: Swedish <sv@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2017-02-20 05:44+0000\n"
-"X-Generator: Launchpad (build 18326)\n"
+"X-Launchpad-Export-Date: 2017-04-14 05:51+0000\n"
+"X-Generator: Launchpad (build 18352)\n"
 "Language: sv\n"
 
 #: ../menulibre.desktop.in.h:1
@@ -190,7 +190,7 @@ msgstr "Återställ"
 
 #: ../data/ui/MenulibreWindow.ui.h:32
 msgid "Test Launcher"
-msgstr ""
+msgstr "Testa startare"
 
 #: ../data/ui/MenulibreWindow.ui.h:33 ../menulibre/MenulibreApplication.py:376
 msgid "Delete"
@@ -206,11 +206,11 @@ msgstr "Flytta ner"
 
 #: ../data/ui/MenulibreWindow.ui.h:36
 msgid "Sort alphabetically"
-msgstr ""
+msgstr "Sortera alfabetiskt"
 
 #: ../data/ui/MenulibreWindow.ui.h:37
 msgid "Sort"
-msgstr ""
+msgstr "Sortera"
 
 #: ../data/ui/MenulibreWindow.ui.h:38
 msgid "<small><i>Filename</i></small>"
@@ -606,11 +606,11 @@ msgstr "Åte_rställ"
 
 #: ../menulibre/MenulibreApplication.py:368
 msgid "_Execute"
-msgstr ""
+msgstr "_Kör"
 
 #: ../menulibre/MenulibreApplication.py:369
 msgid "Execute Launcher"
-msgstr ""
+msgstr "Kör startare"
 
 #: ../menulibre/MenulibreApplication.py:375
 msgid "_Delete"
@@ -716,7 +716,7 @@ msgstr "Ny katalog"
 #: ../menulibre/MenulibreApplication.py:1758
 #, python-format
 msgid "Could not find \"%s\" in your PATH."
-msgstr ""
+msgstr "Det gick inte att hitta \"%s\" i din PATH."
 
 #: ../menulibre/MenulibreApplication.py:1780
 msgid "Are you sure you want to delete this separator?"
