--- a/po/ca.po
+++ b/po/ca.po
@@ -9,12 +9,12 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-04-21 20:25-0400\n"
 "PO-Revision-Date: 2014-07-15 00:07+0000\n"
-"Last-Translator: Adolfo Jayme <fitoschido@gmail.com>\n"
+"Last-Translator: Adolfo Jayme <Unknown>\n"
 "Language-Team: Catalan <ca@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2017-04-22 06:21+0000\n"
+"X-Launchpad-Export-Date: 2017-04-23 05:41+0000\n"
 "X-Generator: Launchpad (build 18361)\n"
 "Language: ca\n"
 
